tests/error/py_errors/guppy_name1.err
Error: Not compile-time evaluatable (at $FILE:6:14)
  | 
4 | @compile_guppy
5 | def foo(x: int) -> int:
6 |     return py(x + 1)
  |               ^ Guppy variable `x` cannot be accessed in a compile-time
  |                 `py(...)` expression

Guppy compilation failed due to 1 previous error
